--- a/requirements.txt
+++ b/requirements.txt
@@ -72,6 +72,7 @@ PyQt5==5.15.1
 PyQt5-sip==12.8.1
 pyrsistent==0.17.3
 python-dateutil==2.8.1
+python-dotenv==0.14.0
 pytz==2020.1
 PyYAML==5.3.1
 pyzmq==19.0.2
