--- a/requirements.txt
+++ b/requirements.txt
@@ -1,97 +1,12 @@
-appnope==0.1.0
-argon2-cffi==20.1.0
-astroid==2.4.2
-async-generator==1.10
-attrs==20.2.0
-autopep8==1.5.4
-backcall==0.2.0
-beautifulsoup4==4.9.1
-bleach==3.2.1
 certifi==2020.6.20
-cffi==1.14.3
-chardet==3.0.4
 cycler==0.10.0
 Cython==0.29.21
-decorator==4.4.2
-defusedxml==0.6.0
-entrypoints==0.3
-flake8==3.8.3
-html5lib==1.1
-idna==2.10
-imgviz==1.2.2
-importlib-metadata==1.7.0
-ipykernel==5.3.4
-ipython==7.18.1
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isort==5.5.3
-jedi==0.17.2
-Jinja2==2.11.2
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.7
-jupyter-console==6.2.0
-jupyter-core==4.6.3
-jupyterlab-pygments==0.1.1
-kiwisolver==1.2.0
-labelImg==1.8.3
-labelme==4.5.6
-lazy-object-proxy==1.5.1
-lxml==4.5.2
-MarkupSafe==1.1.1
+kiwisolver==1.3.1
 matplotlib==3.3.2
-mccabe==0.6.1
-mistune==0.8.4
-nbclient==0.5.0
-nbconvert==6.0.4
-nbformat==5.0.7
-nest-asyncio==1.4.0
-networkx==2.5
-notebook==6.1.4
-numpy==1.19.2
-opencv-python==4.4.0.42
-opencv-python-headless==4.4.0.42
-packaging==20.4
-pandas==1.1.2
-pandocfilters==1.4.2
-parso==0.8.0
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==7.2.0
-prometheus-client==0.8.0
-prompt-toolkit==3.0.7
-ptyprocess==0.6.0
+numpy==1.19.4
+opencv-python==4.4.0.46
+Pillow==8.0.1
 pycocotools==2.0.2
-pycodestyle==2.6.0
-pycparser==2.20
-pyflakes==2.2.0
-Pygments==2.7.1
-pylint==2.6.0
-pyparsing==3.0.0a2
-PyQt5==5.15.1
-PyQt5-sip==12.8.1
-pyrsistent==0.17.3
+pyparsing==2.4.7
 python-dateutil==2.8.1
-python-dotenv==0.14.0
-pytz==2020.1
-PyYAML==5.3.1
-pyzmq==19.0.2
-qtconsole==4.7.7
-QtPy==1.9.0
-requests==2.24.0
-Send2Trash==1.5.0
 six==1.15.0
-soupsieve==2.0.1
-termcolor==1.1.0
-terminado==0.9.1
-testpath==0.4.4
-toml==0.10.1
-tornado==6.0.4
-traitlets==5.0.4
-typed-ast==1.4.1
-urllib3==1.25.10
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.1
-wrapt==1.12.1
-zipp==3.1.0
